corrections mineures d'alignement

--- a/src/app/home/welcome-player/welcome-player.page.scss
+++ b/src/app/home/welcome-player/welcome-player.page.scss
@@ -3,3 +3,14 @@
     margin-top: 0;
 }
 
+ #avatar{
+    width:150px;
+}
+
+#libelle{
+    margin-left: 20px;
+}
+
+#bouton{
+    margin-right: 15px;
+}
